--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
   <head>
     <title>Hello world</title>
-    <link ref="main.css" rel="stylesheet"/>
+    <link href="main.css" rel="stylesheet"/>
   </head>
   
   <body>
